tests/fixtures/invalid/pow_bytes_set_bytes.py
# Cannot call pow() with Bytes, Set[int], Bytes
x = pow(b"hello", {1, 2, 3}, b"hello")
